# Renderer

./: CMakeLists.txt  fragment.glsl  vertex.glsl
renderer/: renderer.hpp
src/: main.cpp
